# pydantic-playground

./: main.py  pyproject.toml
