[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["costa86 <costa2016@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["email"], version = "^1.10.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
